@@ -52,25 +52,20 @@ MulticastDataLink::receive_strategy(MulticastReceiveStrategy* recv_strategy)
 bool
 MulticastDataLink::join(const ACE_INET_Addr& group_address)
 {
-  int error;
-
-  if ((error = this->socket_.join(group_address)) != 0) {
+  if (this->socket_.join(group_address) != 0) {
     ACE_ERROR_RETURN((LM_ERROR,
                       ACE_TEXT("(%P|%t) ERROR: ")
                       ACE_TEXT("MulticastDataLink::join: ")
-                      ACE_TEXT("join failed: %C\n"),
-                      ACE_OS::strerror(error)),
+                      ACE_TEXT("join failed: %p\n")),
                      false);
   }
 
-  if ((error = start(this->send_strategy_.in(),
-                     this->recv_strategy_.in())) != 0) {
+  if (start(this->send_strategy_.in(), this->recv_strategy_.in()) != 0) {
     stop_i();
     ACE_ERROR_RETURN((LM_ERROR,
 		      ACE_TEXT("(%P|%t) ERROR: ")
 		      ACE_TEXT("MulticastDataLink::join: ")
-		      ACE_TEXT("start failed: %d\n"),
-                      error),
+		      ACE_TEXT("start failed!\n")),
                      false);
   }
 
